Composition Rule Info Popovers

--- a/src/BaroquenMelody.App.Components/Shared/AutoClosePopover.razor
+++ b/src/BaroquenMelody.App.Components/Shared/AutoClosePopover.razor
@@ -1,4 +1,4 @@
-﻿<MudOverlay @bind-Visible="IsPopoverOpen" LockScroll="false" AutoClose="true" OnClosed="OnPopoverClosed" />
+﻿<MudOverlay @bind-Visible="IsPopoverOpen" LockScroll="false" AutoClose="true" DarkBackground="true" OnClosed="OnPopoverClosed" />
 <MudPopover AnchorOrigin="AnchorOrigin"
             TransformOrigin="TransformOrigin"
             Open="IsPopoverOpen"
