--- a/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationCard.razor
@@ -2,9 +2,12 @@
 @implements IDisposable
 
 <MudCard Class="rounded my-2 mx-2 mud-elevation-4" Elevation="ThemeProvider.Elevation" Outlined="true">
-    <CardHeaderSwitch HeaderText="@($"Instrument {Instrument}")"
-                      ConfigurationStatus="@Status"
-                      ValueChanged="HandleIsEnabledChange"/>
+    <CardHeaderSwitch ConfigurationStatus="@Status"
+                      ValueChanged="HandleIsEnabledChange">
+        <HeaderContent>
+            <MudText Typo="Typo.h6">@($"Instrument {Instrument}")</MudText>
+        </HeaderContent>
+    </CardHeaderSwitch>
     <MudCardContent>
         <MudGrid Justify="Justify.SpaceBetween">
             <MudItem xs="12" sm="6" md="5" lg="4" xl="3" xxl="2">
