--- a/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
@@ -1,9 +1,12 @@
 ﻿@inherits Fluxor.Blazor.Web.Components.FluxorComponent
 
 <MudCard Class="rounded my-2 mx-2 mud-elevation-4" Elevation="ThemeProvider.Elevation" Outlined="true">
-    <CardHeaderSwitch HeaderText="@(OrnamentationType.ToSpaceSeparatedString())"
-                      ConfigurationStatus="Status"
-                      ValueChanged="HandleIsEnabledChange"/>
+    <CardHeaderSwitch ConfigurationStatus="Status"
+                      ValueChanged="HandleIsEnabledChange">
+        <HeaderContent>
+            <MudText Typo="Typo.h6">@OrnamentationType.ToSpaceSeparatedString()</MudText>
+        </HeaderContent>
+    </CardHeaderSwitch>
     <MudCardContent>
         <MudGrid>
             <MudItem xs="12" sm="4" md="4" lg="4" xl="4" xxl="4">
@@ -19,7 +22,7 @@
                     </PopoverContent>
                 </NumericInputWithPopover>
             </MudItem>
-            <MudFlexBreak />
+            <MudFlexBreak/>
             <MudItem xs="12" sm="12" md="12" lg="12" xl="12" xxl="12" Class="d-none d-sm-flex">
                 <MudSlider T="int"
                            Value="@Probability"
@@ -36,7 +39,7 @@
                            Step="1"
                            ValueLabelFormat="0'%'"
                            Culture="CultureInfo.CurrentCulture"
-                           Disabled="Status.IsFrozen()" />
+                           Disabled="Status.IsFrozen()"/>
             </MudItem>
         </MudGrid>
     </MudCardContent>
