--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -57,3 +57,4 @@
 @inject IDialogService DialogService
 @inject IMidiInstrumentRepository MidiInstrumentRepository
 @inject IPhysicalDeviceInfo PhysicalDeviceInfo
+@inject IJSRuntime JsRuntime
