--- a/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationCard.razor
@@ -68,7 +68,7 @@
                            Disabled="Status.IsFrozen()">
                     @foreach (var noteIndex in LowestPitchNoteIndices)
                     {
-                        <MudSelectItem Value="noteIndex">@CompositionConfigurationState.Value.Notes[noteIndex]</MudSelectItem>
+                        <MudSelectItem Value="noteIndex">@CompositionConfigurationState.Value.AvailableNotes[noteIndex]</MudSelectItem>
                     }
                 </MudSelect>
             </MudItem>
@@ -83,7 +83,7 @@
                            Disabled="Status.IsFrozen()">
                     @foreach (var noteIndex in HighestPitchNoteIndices)
                     {
-                        <MudSelectItem Value="noteIndex">@CompositionConfigurationState.Value.Notes[noteIndex]</MudSelectItem>
+                        <MudSelectItem Value="noteIndex">@CompositionConfigurationState.Value.AvailableNotes[noteIndex]</MudSelectItem>
                     }
                 </MudSelect>
             </MudItem>
@@ -222,7 +222,7 @@
 
     private const int TonalRangeSliderMin = 0;
 
-    private int TonalRangeSliderMax => CompositionConfigurationState.Value.Notes.Count - 1;
+    private int TonalRangeSliderMax => CompositionConfigurationState.Value.AvailableNotes.Count - 1;
 
     private int TonalRangeMinSlideableMax => TonalRangeSliderMax - CompositionConfiguration.MinInstrumentRange;
 
@@ -287,7 +287,7 @@
 
     private IEnumerable<int> NoteIndices => Enumerable.Range(TonalRangeSliderMin, TonalRangeSliderMax + 1);
 
-    private IEnumerable<int> LowestPitchNoteIndices => NoteIndices.Take(CompositionConfigurationState.Value.Notes.Count - CompositionConfiguration.MinInstrumentRange);
+    private IEnumerable<int> LowestPitchNoteIndices => NoteIndices.Take(CompositionConfigurationState.Value.AvailableNotes.Count - CompositionConfiguration.MinInstrumentRange);
 
     private IEnumerable<int> HighestPitchNoteIndices => NoteIndices.Skip(CompositionConfiguration.MinInstrumentRange);
 
@@ -306,8 +306,8 @@
         _minVelocityValue = MinVelocity;
         _maxVelocityValue = MaxVelocity;
 
-        _lowestPitchNoteIndex = CompositionConfigurationState.Value.Notes.IndexOf(LowestPitchNote);
-        _highestPitchNoteIndex = CompositionConfigurationState.Value.Notes.IndexOf(HighestPitchNote);
+        _lowestPitchNoteIndex = CompositionConfigurationState.Value.AvailableNotes.IndexOf(LowestPitchNote);
+        _highestPitchNoteIndex = CompositionConfigurationState.Value.AvailableNotes.IndexOf(HighestPitchNote);
 
         if (PhysicalDeviceInfo.IsMobile)
         {
@@ -338,8 +338,8 @@
                 _minVelocityValue = configuration.MinVelocity;
                 _maxVelocityValue = configuration.MaxVelocity;
 
-                _lowestPitchNoteIndex = CompositionConfigurationState.Value.Notes.IndexOf(configuration.MinNote);
-                _highestPitchNoteIndex = CompositionConfigurationState.Value.Notes.IndexOf(configuration.MaxNote);
+                _lowestPitchNoteIndex = CompositionConfigurationState.Value.AvailableNotes.IndexOf(configuration.MinNote);
+                _highestPitchNoteIndex = CompositionConfigurationState.Value.AvailableNotes.IndexOf(configuration.MaxNote);
             });
     }
 
@@ -359,7 +359,7 @@
     private void HandleLowestPitchNoteIndexChange(int noteIndex) => Dispatcher.Dispatch(
         new UpdateInstrumentConfiguration(
             Instrument,
-            CompositionConfigurationState.Value.Notes[noteIndex],
+            CompositionConfigurationState.Value.AvailableNotes[noteIndex],
             HighestPitchNote,
             MinVelocity,
             MaxVelocity,
@@ -373,7 +373,7 @@
         new UpdateInstrumentConfiguration(
             Instrument,
             LowestPitchNote,
-            CompositionConfigurationState.Value.Notes[noteIndex],
+            CompositionConfigurationState.Value.AvailableNotes[noteIndex],
             MinVelocity,
             MaxVelocity,
             MidiInstrument,
