Tonal Range Audio Samples

--- a/src/BaroquenMelody.App.Components/Shared/CompositionProgress.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionProgress.razor
@@ -272,10 +272,11 @@ else
 
     private string GetMidiFileAsBase64()
     {
-        var localFilePath = BaroquenMelodyState.Value.Path;
-        var bytes = File.ReadAllBytes(localFilePath);
+        using var stream = new MemoryStream();
 
-        return Convert.ToBase64String(bytes);
+        BaroquenMelodyState.Value.Composition!.MidiFile.Write(stream);
+
+        return Convert.ToBase64String(stream.ToArray());
     }
 
     public new async ValueTask DisposeAsync()
