--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -58,3 +58,4 @@
 @inject IMidiInstrumentRepository MidiInstrumentRepository
 @inject IPhysicalDeviceInfo PhysicalDeviceInfo
 @inject IJSRuntime JsRuntime
+@inject IMidiExampleGenerator MidiExampleGenerator
