--- a/src/BaroquenMelody.App.Components/Pages/Home.razor
+++ b/src/BaroquenMelody.App.Components/Pages/Home.razor
@@ -124,7 +124,7 @@
 
     private async Task Compose()
     {
-        if (!BaroquenMelodyState.Value.HasBeenSaved && BaroquenMelodyState.Value.BaroquenMelody is not null)
+        if (!BaroquenMelodyState.Value.HasBeenSaved && BaroquenMelodyState.Value.Composition is not null)
         {
             var dialogReference = await DialogService.ShowAsync<ConfirmCompositionDialogue>("Save composition?", new DialogOptions());
             var dialogResult = await dialogReference.Result;
@@ -161,7 +161,7 @@
     private async Task<bool> Save()
     {
         var isSaved = await MidiSaver.SaveAsync(
-            BaroquenMelodyState.Value.BaroquenMelody!,
+            BaroquenMelodyState.Value.Composition!,
             BaroquenMelodyState.Value.Path,
             CancellationToken.None
         ).ConfigureAwait(false);
